--- a/_posts/2024-01-28-NJU-PA2-TRM.md
+++ b/_posts/2024-01-28-NJU-PA2-TRM.md
@@ -3,7 +3,7 @@ title: '南京大学PA2-TRM'
 date: 2024/01/31
 update: 2024/01/31
 permalink: /posts/2024/01/nju-pa-2-trm
-excerpt: '南京大学计算机基础PA2-TRM'
+excerpt: '南京大学计算机基础PA2-TRM部分过程记录'
 tags:
   - OS
 ---
