--- a/_posts/2024-02-03-NJU-PA2-IOE.md
+++ b/_posts/2024-02-03-NJU-PA2-IOE.md
@@ -2,7 +2,7 @@
 title: '南京大学PA2-IOE'
 date: 2024/02/03
 permalink: /posts/2024/01/nju-pa-2-ioe
-excerpt: '南京大学计算机基础PA2-IOE'
+excerpt: '南京大学计算机基础PA2-IOE部分过程记录'
 tags:
   - OS
 ---
@@ -181,4 +181,55 @@ void __am_input_keybrd(AM_INPUT_KEYBRD_T *kbd)
 呃讲义好像说了是要在这个框里输入才有反应...被native误导了属于是，没仔细看讲义是这样的233333  
 
 ## VGA
+VGA可以用于显示颜色像素, 是最常用的输出设备.` nemu/src/device/vga.c`模拟了VGA的功能. VGA初始化时注册了从`0xa1000000`开始的一段用于映射到`video memory`(也叫frame buffer)的MMIO空间. 代码只模拟了`400x300x32`的图形模式, 一个像素占32个bit的存储空间, R(red), G(green), B(blue), A(alpha)各占8 bit, 其中VGA不使用alpha的信息. 
+```c
+//在AM中
+void __am_gpu_config(AM_GPU_CONFIG_T *cfg) {
+  uint32_t tmp = inl(VGACTL_ADDR);
+  uint16_t h = (uint16_t)(tmp & 0x0000ffff);
+  uint16_t w = (uint16_t)(tmp >> 16);
+
+  *cfg = (AM_GPU_CONFIG_T) {
+    .present = true, .has_accel = false,
+    .width = w,
+    .height = h,
+    .vmemsz = 0
+  };
+}
+
+// int x, y; void *pixels; int w, h; bool sync;
+void __am_gpu_fbdraw(AM_GPU_FBDRAW_T *ctl) {
+  int w = io_read(AM_GPU_CONFIG).width;
+  uint32_t *dst = (uint32_t *)(uintptr_t) FB_ADDR;
+  uint32_t *src = (uint32_t *)(uintptr_t) ctl -> pixels;
+  // 对应位置像素点的信息
+  for(int i = 0; i < ctl -> h; i++) {
+    for(int j = 0; j < ctl -> w; j++) {
+      dst[(ctl -> y) * w + i * w + ctl -> x + j] = src[i * (ctl -> w) + j];
+    }
+  }
+  if (ctl->sync) {
+    outl(SYNC_ADDR, 1);
+  }
+}
+
+//在nemu中，为硬件添加同步
+void vga_update_screen()
+{
+  // TODO: call `update_screen()` when the sync register is non-zero,
+  // then zero out the sync register
+  if (vgactl_port_base[1] & 0x1)
+  {
+    update_screen();
+    vgactl_port_base[1] = 0;
+  }
+}
+```
+
+## 声卡
+TODO
+
+## RTFSC
+其实很多代码都只是走马观花，大概的看了一下是在干什么，没有深究过。有时间的话要重头好好看看。PA3会遇到很多问题的样子。  
+
 
