--- a/_posts/2024-01-28-NJU-PA1.md
+++ b/_posts/2024-01-28-NJU-PA1.md
@@ -1,9 +1,9 @@
 ---
-title: '南京大学计算机基础PA1'
+title: '南京大学PA1'
 date: 2024/01/28
 update: 2024/01/28
 permalink: /posts/2024/01/nju-pa-1
-excerpt: '南京大学计算机基础PA1'
+excerpt: '南京大学计算机基础PA1过程记录'
 tags:
   - OS
 ---
