--- a/_posts/2024-01-16-数位dp.md
+++ b/_posts/2024-01-16-数位dp.md
@@ -1,17 +1,13 @@
 ---
-title: '数位dp'
+title: '数位dp模板'
 date: 2024/01/16
 update: 2024/01/17
 permalink: /posts/2024/01/digit_dp
-excerpt: 'LeetCode 数位dp模板解题'
+excerpt: 'Python3 记忆化搜索 数位dp'
 tags:
   - LeetCode
   - Algorithm
 ---
-
-参考自 @灵茶山艾府 
-
-不得不说真是非常强..拿着这个模板进行改动能够直接秒掉一大堆题，甚至很多是Hard题。
 
 ## LeetCode.2376 统计特殊整数 Hard
 
