--- a/_posts/2024-01-25-daily1.25.md
+++ b/_posts/2024-01-25-daily1.25.md
@@ -3,7 +3,7 @@ title: 'Daily 01 25'
 date: 2024/01/25
 update: 2024/01/25
 permalink: /posts/2024/01/Daily_01_25
-excerpt: 'LeetCode 1642. 可以到达的最远建筑'
+excerpt: 'LeetCode 1642. 可以到达的最远建筑  一点小记。'
 tags:
   - LeetCode
   - Algorithm
