--- a/_posts/2024-02-05-NJU-PA3-批处理系统.md
+++ b/_posts/2024-02-05-NJU-PA3-批处理系统.md
@@ -1,8 +1,8 @@
 ---
-title: '南京大学PA3'
+title: '南京大学 PA3-批处理系统'
 date: 2024/02/05
-permalink: /posts/2024/01/nju-pa-3
-excerpt: '南京大学计算机基础PA3部分过程记录'
+permalink: /posts/2024/01/nju-pa-3-1
+excerpt: '南京大学 计算机基础PA3 批处理系统，用户程序和用户调用'
 tags:
   - OS
 ---
