--- a/_posts/2024-02-14-NJU-PA3-文件系统.md
+++ b/_posts/2024-02-14-NJU-PA3-文件系统.md
@@ -178,7 +178,7 @@ size_t fs_write(int fd, const void *buf, size_t len) {
   * SEEK_CUR:设置偏移量为距离当前偏移量offset
   * SEEK_END:设置偏移量为距离为文件尾offset 
     > 这样不会偏到外面去吗?  
-    
+
 ```c
 size_t fs_lseek(int fd, size_t offset, int whence) {
     if (fd <= 2) {
@@ -429,3 +429,42 @@ int main() {
     }
 }
 ```
+
+**实现NDL的时钟**
+为了更好地封装IOE的功能, 我们在Navy中提供了一个叫NDL(NJU DirectMedia Layer)的多媒体库. 这个库的代码位于navy-apps/libs/libndl/NDL.c中, 但大部分的功能都没有实现. 代码中有一些和NWM_APP相关的内容, 你目前可以忽略它们, 但不要修改相关代码, 你将会在PA4的最后体验相关的功能. NDL向用户提供了一个和时钟相关的API:
+```c
+// 以毫秒为单位返回系统时间
+uint32_t NDL_GetTicks();
+```
+需要用gettimeofday()实现NDL_GetTicks(), 然后修改timer-test测试, 让它通过调用NDL_GetTicks()来获取当前时间. 你可以根据需要在NDL_Init()和NDL_Quit()中添加初始化代码和结束代码, 我们约定程序在使用NDL库的功能之前必须先调用NDL_Init(). 如果你认为无需添加初始化代码, 则无需改动它们.  
+```c
+uint32_t NDL_GetTicks() {
+  //PA3.3
+  struct timeval tv;
+  assert(gettimeofday(&tv, NULL) == 0);
+  return tv.tv_sec * 1000 + tv.tv_usec / 1000;
+}
+```
+
+### 键盘
+另一个输入设备是键盘, 按键信息对系统来说本质上就是到来了一个事件. 一种简单的方式是把事件以文本的形式表现出来, 我们定义以下两种事件,
+
+按下按键事件, 如kd RETURN表示按下回车键
+松开按键事件, 如ku A表示松开A键
+按键名称与AM中的定义的按键名相同, 均为大写. 此外, 一个事件以换行符\n结束.
+
+我们采用文本形式来描述事件有两个好处, 首先文本显然是一种字节序列, 这使得事件很容易抽象成文件; 此外文本方式使得用户程序可以容易可读地解析事件的内容. Nanos-lite和Navy约定, 上述事件抽象成一个特殊文件/dev/events, 它需要支持读操作, 用户程序可以从中读出按键事件, 但它不必支持lseek, 因为它是一个字符设备.
+
+NDL向用户提供了一个和按键事件相关的API:
+```c
+// 读出一条事件信息, 将其写入`buf`中, 最长写入`len`字节
+// 若读出了有效的事件, 函数返回1, 否则返回0
+int NDL_PollEvent(char *buf, int len);
+```
+**把按键输入抽象成文件**
+你需要:
+
+* 实现events_read()(在nanos-lite/src/device.c中定义), 把事件写入到buf中, 最长写入len字节, 然后返回写入的实际长度. 其中按键名已经在字符串数组names中定义好了, 你需要借助IOE的API来获得设备的输入. 另外, 若当前没有有效按键, 则返回0即可.
+* 在VFS中添加对/dev/events的支持.
+* 在NDL中实现NDL_PollEvent(), 从/dev/events中读出事件并写入到buf中.  
+我们可以假设一次最多只会读出一个事件, 这样可以简化你的实现. 实现后, 让Nanos-lite运行navy-apps/tests/event-test, 如果实现正确, 敲击按键时程序会输出按键事件的信息.
