--- a/_posts/2024-02-14-NJU-PA3-文件系统.md
+++ b/_posts/2024-02-14-NJU-PA3-文件系统.md
@@ -465,6 +465,177 @@ int NDL_PollEvent(char *buf, int len);
 你需要:
 
 * 实现events_read()(在nanos-lite/src/device.c中定义), 把事件写入到buf中, 最长写入len字节, 然后返回写入的实际长度. 其中按键名已经在字符串数组names中定义好了, 你需要借助IOE的API来获得设备的输入. 另外, 若当前没有有效按键, 则返回0即可.
+```c
+size_t events_read(void *buf, size_t offset, size_t len) {
+  AM_INPUT_KEYBRD_T ev = io_read(AM_INPUT_KEYBRD);
+  if (ev.keycode == AM_KEY_NONE) return 0;
+  const char *name = keyname[ev.keycode];
+  //printf("%s\n",name);
+  char *tag= ev.keydown ? "kd ":"ku ";
+  strcpy(buf,tag);
+  strcat(buf,name);
+  //Log("Got keyboard: %s (%d) %s",name,ev.keycode,ev.keydown?"Down":"Up");
+  //这里不大严谨，应该返回实际写入的长度，但是不能超过len
+  return len;
+}
+```
 * 在VFS中添加对/dev/events的支持.
+```c
+/* This is the information about all files in disk. */
+static Finfo file_table[] __attribute__((used)) = {
+  [FD_STDIN]  = {"stdin", 0, 0, invalid_read, invalid_write},
+  [FD_STDOUT] = {"stdout", 0, 0, invalid_read, serial_write},
+  [FD_STDERR] = {"stderr", 0, 0, invalid_read, serial_write},
+  [DEV_EVENTS] = {"/dev/events", 0, 0, events_read, invalid_write}, //对键盘输入的支持
+#include "files.h"
+};
+```
 * 在NDL中实现NDL_PollEvent(), 从/dev/events中读出事件并写入到buf中.  
+```c
+int NDL_PollEvent(char *buf, int len) {
+  //PA3.3
+  int fd = open("/dev/events",O_RDONLY); //区别open和fopen
+  return read(fd, buf, sizeof(char)*len);
+}
+```
 我们可以假设一次最多只会读出一个事件, 这样可以简化你的实现. 实现后, 让Nanos-lite运行navy-apps/tests/event-test, 如果实现正确, 敲击按键时程序会输出按键事件的信息.
+
+### VGA
+*出现各种搞不明白的问题，耗时五个小时终于正常显示，望周知。*
+
+
+程序为了更新屏幕, 只需要将像素信息写入VGA的显存即可. 于是, Nanos-lite需要做的, 便是把显存抽象成文件. 显存本身也是一段存储空间, 它以行优先的方式存储了将要在屏幕上显示的像素. Nanos-lite和Navy约定, 把显存抽象成文件/dev/fb(fb为frame buffer之意), 它需要支持写操作和lseek, 以便于把像素更新到屏幕的指定位置上.
+
+NDL向用户提供了两个和绘制屏幕相关的API:
+```c
+// 打开一张(*w) X (*h)的画布
+// 如果*w和*h均为0, 则将系统全屏幕作为画布, 并将*w和*h分别设为系统屏幕的大小
+void NDL_OpenCanvas(int *w, int *h);
+
+// 向画布`(x, y)`坐标处绘制`w*h`的矩形图像, 并将该绘制区域同步到屏幕上
+// 图像像素按行优先方式存储在`pixels`中, 每个像素用32位整数以`00RRGGBB`的方式描述颜色
+void NDL_DrawRect(uint32_t *pixels, int x, int y, int w, int h);
+```
+其中"画布"是一个面向程序的概念, 程序绘图时的坐标都是针对画布来设定的, 这样程序就无需关心系统屏幕的大小, 以及需要将图像绘制到系统屏幕的哪一个位置. NDL可以根据系统屏幕大小以及画布大小, 来决定将画布"贴"到哪里, 例如贴到屏幕左上角或者居中, 从而将画布的内容写入到`frame buffer`中正确的位置.
+
+`NDL_DrawRect()`的功能和PA2中介绍的绘图接口是非常类似的. 但为了实现它, NDL还需要知道屏幕大小的信息. Nanos-lite和Navy约定, 屏幕大小的信息通过`/proc/dispinfo`文件来获得, 它需要支持读操作. `navy-apps/README.md`中对这个文件内容的格式进行了约定, 你需要阅读它. 至于具体的屏幕大小, 你需要通过IOE的相应API来获取.
+
+**在NDL中获取屏幕大小**
+* 实现`dispinfo_read()`(在`nanos-lite/src/device.c`中定义), 按照约定将文件的len字节写到buf中(我们认为这个文件不支持`lseek`, 可忽略`offset`).
+```c
+size_t dispinfo_read(void *buf, size_t offset, size_t len) {
+  int w=io_read(AM_GPU_CONFIG).width;
+  int h=io_read(AM_GPU_CONFIG).height;
+
+  int ret=snprintf(buf,len,"WIDTH:%d\nHEIGHT:%d",w,h);
+  Log("%s",(char*)buf);
+  return ret+1;
+}
+```
+* 在NDL中读出这个文件的内容, 从中解析出屏幕大小, 然后实现`NDL_OpenCanvas()`的功能. 目前`NDL_OpenCanvas()`只需要记录画布的大小就可以了, 当然我们要求画布大小不能超过屏幕大小.  
+```c
+//打开w * h的画布
+void NDL_OpenCanvas(int *w, int *h) {
+  if (*w == 0) {
+      *w = screen_w;
+  }
+  if (*h == 0) {
+      *h = screen_h;
+  }
+  canvas_w = *w;
+  canvas_h = *h;
+  //居中显示
+  canvas_relative_screen_w = (screen_w - canvas_w) / 2;
+  canvas_relative_screen_h = (screen_h - canvas_h) / 2;
+
+}
+//加载屏幕
+void init_screen(){
+  int fd=open("/proc/dispinfo",O_RDONLY);
+  char info_buffer[128];
+  read(fd,info_buffer,sizeof(info_buffer));
+  char *width_line=strtok(info_buffer,"\n");  //WIDTH:xxx
+  char *heigth_line=strtok(NULL,"\n"); //HEIGHT:xxx
+  char *width=(width_line+6);
+  char *height=(heigth_line+7);
+  screen_w=atoi(width);
+  screen_h=atoi(height);
+  //printf("%d %d\n",screen_w,screen_h);
+}
+
+int NDL_Init(uint32_t flags) {
+  if (getenv("NWM_APP")) {
+    evtdev = 3;
+  }
+  init_screen();
+  return 0;
+}
+```
+让`Nanos-lite`运行`navy-apps/tests/bmp-test`, 由于目前还没有实现绘图功能, 因此无法输出图像内容, 但你可以先通过`printf()`输出解析出的屏幕大小.
+
+**把VGA显存抽象成文件**
+* 在`init_fs()`(在`nanos-lite/src/fs.c`中定义)中对文件记录表中/dev/fb的大小进行初始化. 
+```c
+void init_fs() {
+  // TODO: initialize the size of /dev/fb
+    AM_GPU_CONFIG_T ev = io_read(AM_GPU_CONFIG);
+    int width = ev.width;
+    int height = ev.height;
+    file_table[FD_FB].size = width * height * sizeof(uint32_t);
+} 
+```
+* 实现`fb_write()`(在`nanos-lite/src/device.c`中定义), 用于把buf中的len字节写到屏幕上offset处. 你需要先从`offset`计算出屏幕上的坐标, 然后调用IOE来进行绘图. 另外我们约定每次绘图后总是马上将`frame buffer`中的内容同步到屏幕上.
+```c
+size_t fb_write(const void *buf, size_t offset, size_t len) {
+  AM_GPU_CONFIG_T ev = io_read(AM_GPU_CONFIG);
+  int width = ev.width;
+
+  int y = offset / width;
+  int x = offset - y * width;
+
+  io_write(AM_GPU_FBDRAW, x, y, (void *)buf, len, 1, true);
+  return len;
+}
+```
+* 在`NDL`中实现`NDL_DrawRect()`, 通过往`/dev/fb`中的正确位置写入像素信息来绘制图像. 你需要梳理清楚系统屏幕(即`frame buffer`), `NDL_OpenCanvas()`打开的画布, 以及`NDL_DrawRect()`指示的绘制区域之间的位置关系.
+让Nanos-lite运行navy-apps/tests/bmp-test, 如果实现正确, 你将会看到屏幕上显示Project-N的logo.
+```c
+void NDL_DrawRect(uint32_t *pixels, int x, int y, int w, int h) {
+  int fd = open("/dev/fb", 0, 0);
+  for (int i = 0; i < h && y + i < canvas_h; ++i) {
+    lseek(fd, (y + canvas_relative_screen_h + i) * screen_w + (x + canvas_relative_screen_w), SEEK_SET);
+    write(fd, pixels + i * w, w < canvas_w - x ? w : canvas_w - x);
+  }
+  assert(close(fd) == 0);
+}
+```
+**实现居中的画布**
+你可以根据屏幕大小和画布大小, 让NDL将图像绘制到屏幕的中央, 从而获得较好的视觉效果.  
+在上方已经实现。
+
+![PA3.4](/images/PA/PA3.4.png)
+
+此外，**fs_write函数也需要修改**。大概是因为在屏幕上输出不能忽略offset，否则只会输出到第一行...(是的就是因为这个结果而找了五个小时原因，望周知。)最后的结果是一条直线，但是在这条直线上可以观察到按行绘图的过程。  
+
+```c
+size_t fs_write(int fd, const void *buf, size_t len) {
+    WriteFn writeFn = file_table[fd].write;
+    if (writeFn != NULL&&fd<FD_FB) {
+        return writeFn(buf, 0, len);
+    }
+    
+    size_t write_len = len;
+    size_t open_offset = file_table[fd].open_offset;
+    size_t size = file_table[fd].size;
+    size_t disk_offset = file_table[fd].disk_offset;
+
+    if (open_offset > size) return 0;
+    if (open_offset + len > size) write_len = size - open_offset;
+
+    writeFn ?
+        writeFn      (buf, disk_offset + open_offset, write_len):  
+        ramdisk_write(buf, disk_offset + open_offset, write_len);
+    file_table[fd].open_offset += write_len;
+    return write_len;
+}
+```
