--- a/_posts/2025-12-03-cs336-ch1-train_bpe.md
+++ b/_posts/2025-12-03-cs336-ch1-train_bpe.md
@@ -14,11 +14,11 @@ tags:
 
 
 ## 分块并行预分词
-每次读取 100MB 文本块（避免加载大文件占用过多内存）
-调用 parallel_pre_tokenize 并行处理每个块，聚合分词频率
+每次读取 `100MB` 文本块（避免加载大文件占用过多内存）
+调用 `parallel_pre_tokenize`并行处理每个块，聚合分词频率
 
 ## 迭代合并字节对
-计算当前所有相邻字节对的频率（get_stats）
+计算当前所有相邻字节对的频率（`get_stats`）
 
 合并最高频字节对（频率相同时按字节对字典序排序）
 
@@ -27,6 +27,12 @@ tags:
 重复直至词汇表达到目标大小或无可用合并对
 
 构建最终词汇表：将词汇表列表转换为 Token ID → 字节 的字典
+
+## 一些问题
+为什么拆分为多个chunk的时候，如果`special token`刚好被切分时也不会出错？
+
+**原因**：`special token` 在代码中被硬编码进词表里, `GPT/BPE tokenizer` 在 `tokenization` 时，通常用 `Longest-Match-First`（最长匹配优先）算法，
+只有在词表里没有完整 `token` 时，才会拆成字节或更小单元
 
 ## 完整代码如下
 ```python
